--- a/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-historia.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-historia.xhtml
@@ -6,27 +6,35 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets">
 
     <p:panel header="Información historia">
-        <p:messages />
-        <h:panelGrid columns="2" columnClasses="label, value">
+        <p:tooltip />
 
-            <h:outputText value="Fecha matrícula: *" styleClass="etiquetaFormulario"/>
-            <p:calendar locale="de" navigator="true" pattern="dd/MM/yyyy" styleClass="valorEtiquetaFormulario"/>
+        <h:panelGrid columns="3" columnClasses="label, value" >
 
-            <h:outputText value="Estado matrícula: *" styleClass="etiquetaFormulario"/>
-            <p:selectOneMenu style="width:330px">
+            <p:outputLabel for="claFechaMatricula" value="Fecha matrícula: *" styleClass="etiquetaFormulario"/>
+            <p:calendar id="claFechaMatricula" value="#{MbFormEstablecimiento.novedadSeleccionada.fechaMatricula}" 
+                        locale="de" navigator="true" pattern="dd/MM/yyyy" styleClass="valorEtiquetaFormulario"/>
+            <p:message for="claFechaMatricula" />
+
+            <p:outputLabel value="Estado matrícula: *" styleClass="etiquetaFormulario"/>
+            <p:selectOneMenu id="cboEstadoMatricula" value="#{MbFormEstablecimiento.novedadSeleccionada.estadoMatricula}"  style="width:430px">
                 <f:selectItem itemLabel="Estado..." itemValue="" />
                 <f:selectItem itemLabel="Activa" itemValue="Activa" />
                 <f:selectItem itemLabel="Inactiva" itemValue="Inactiva" />
             </p:selectOneMenu>
+            <p:message for="cboEstadoMatricula" />
 
-            <h:outputText value="Ultimo año renovado: *" styleClass="etiquetaFormulario"/>
-            <p:inputText styleClass="valorEtiquetaFormulario"/>
+            <p:outputLabel value="Ultimo año renovado: *" styleClass="etiquetaFormulario"/>
+            <p:inputText id="txtUltimoAnoRenovado" value="#{MbFormEstablecimiento.novedadSeleccionada.ultimoAnoRenovado}"  styleClass="valorEtiquetaFormulario"/>
+            <p:message for="txtUltimoAnoRenovado" />
 
-            <h:outputText value="Fecha de creación: *" styleClass="etiquetaFormulario"/>
-            <p:calendar locale="de" navigator="true" pattern="dd/MM/yyyy" styleClass="valorEtiquetaFormulario"/>
+            <p:outputLabel value="Fecha de creación: *" styleClass="etiquetaFormulario"/>
+            <p:calendar id="claFechaCreacion" value="#{MbFormEstablecimiento.novedadSeleccionada.fechaCreacion}"  locale="de" navigator="true" pattern="dd/MM/yyyy" styleClass="valorEtiquetaFormulario"/>
+            <p:message for="claFechaCreacion" />
 
-            <h:outputText value="Fecha de inicio de actividades: *" styleClass="etiquetaFormulario"/>
-            <p:calendar locale="de" navigator="true" pattern="dd/MM/yyyy" styleClass="valorEtiquetaFormulario"/>
+            <p:outputLabel value="Fecha de inicio de actividades: *" styleClass="etiquetaFormulario"/>
+            <p:calendar id="claFechaInicioActividades" value="#{MbFormEstablecimiento.novedadSeleccionada.fechaInicioActi}"  locale="de" navigator="true" pattern="dd/MM/yyyy" styleClass="valorEtiquetaFormulario"/>
+            <p:message for="claFechaInicioActividades" />
+
             <!--
             <h:outputText value="Tipo de novedad " styleClass="etiquetaFormulario"/>
             <p:selectOneMenu style="width:330px">
