--- a/GrupoEmpresarial-war/web/interfaz/establecimiento/itz-informe-establecimiento.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/establecimiento/itz-informe-establecimiento.xhtml
@@ -2,25 +2,105 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui">
     <h:body>
         <ui:composition template="/plantilla/plantilla.xhtml">
             <ui:define name="content">
-                <h3 class="titulo-center-h3">REPORTE DE PERFILAMIENTO DE LOS ESTABLECIMIENTOS</h3>
                 <h:form style="height: 88%;" >
+                    <p:growl id="msnInforUnidadLegal" showDetail="true" />
+                    <h3 class="titulo-center-h3">REPORTE DE PERFILAMIENTO DE LOS ESTABLECIMIENTOS</h3>
+                    <!--p:media value="#{MbReporteGrupoEmpresa.contenido}" cache="false" width="100%" height="100%" player="pdf"/-->
 
-                   <p:commandButton value="Descargar" 
-                                    actionListener="#{MbReporteGrupoEmpresa.descargarArchivo}"/>
+                    <div class="ui-grid ui-grid-responsive">
+                        <div class="ui-grid-row">
+                            <div class="ui-grid-col-12">
+                                <h4 class="titulo-left-h3">Unidad Legal</h4>
+                                <p>En esta sección el usuario puede generar un reporte en formato PDF, donde se describe todos establecimientos de la unidad legal seleccionada.</p>
+                                <p:selectOneMenu id="cboUnidadLegal" value="#{MbFormEstablecimiento.idIdentificacionSeleccionada}" 
+                                                 style="width:430px">
+                                    <!--p:ajax event="change" listener="#{MbFormEstablecimiento.seleccionarUnidadLegal(unidadLegal)}" update="dtEstablecimiento"/-->
+                                    <p:ajax event="change" listener="#{MbFormEstablecimiento.mySelectionMethodListener}" update="dtEstablecimiento"/>
+                                    <f:selectItem itemLabel="Unidad..." itemValue="" noSelectionOption="true"/>
+                                    <f:selectItems value="#{MbFormEstablecimiento.listaIdentificacionUnidadLegal}" var="unidadLegal" itemLabel="#{unidadLegal.nombreRegistrado}" itemValue="#{unidadLegal.idGrupoRelacionado}"/>
+                                </p:selectOneMenu>
+                            </div>
+                        </div>
+                        <div class="ui-grid-row">
+                            <div class="ui-grid-col-12">
+                                <h4 class="titulo-left-h3">Generación de Reporte</h4>
+                                <p>En esta sección el usuario puede generar un reporte en formato PDF, donde se describe todos establecimientos de la unidad legal seleccionada.</p>
+                                <p:commandButton id="btnGenerarReporteEstablecimiento" value="Generar reporte" update="dlgReportePdf" oncomplete="PF('dlg').show();"
+                                                 actionListener="#{MbReporteGrupoEmpresa.generarReportePdf(nerv['reporte.establecimiento.path'], nerv['reporte.establecimiento.archivo'])}"/>
+                                <!--p:media value="#{MbReporteGrupoEmpresa.contenido}" cache="false" width="100%" height="90%" player="pdf"/-->
+                            </div>
+                        </div>
+                        <div class="ui-grid-row">
+                            <div class="ui-grid-col-12">
+                                <h4 class="titulo-left-h3">Actualizar información desde formulario</h4>
+                                <p:outputPanel id="outPnlEstablecimiento" deferred="true">
+                                    <p:dataTable id="dtEstablecimiento" var="fila" value="#{MbFormEstablecimiento.listaIdentificacion}"
+                                                 rowIndexVar="rowIndex"
+                                                 emptyMessage="La consulta no genero resultados..." paginatorPosition="bottom" 
+                                                 paginator="true" rows="50" scrollable="true" scrollHeight="280" 
+                                                 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                                                 rowsPerPageTemplate="50,150,300" 
+                                                 selectionMode="single" rowKey="#{fila.id.id}">
 
-                    
-                    <p:commandButton id="btnGenerarReporte" value="Generar reporte" update="@form"
-                                     actionListener="#{MbReporteGrupoEmpresa.generarReportePdf(nerv['reporte.grupoEmpresarial.path'], nerv['reporte.grupoEmpresarial.archivo'])}"/>
-                    <p:media value="#{MbReporteGrupoEmpresa.contenido}" cache="false" width="100%" height="100%" player="pdf"/>
-                    <p:blockUI block="@form" trigger="btnGenerarReporte" >
+                                        <p:column headerText="#" width="25">
+                                            <p:outputLabel value="#{rowIndex+1}"/>
+                                        </p:column>
+                                        <p:column headerText="Establecimiento">
+                                            <p:outputLabel value="#{fila.nombreRegistrado}"/>
+                                        </p:column>
+                                        <p:column headerText="">
+                                            <p:commandLink action="#{MbFormEstablecimiento.seleccionarEstablecimiento(fila.id.id)}" ajax="false">
+                                                <h:outputText value="Editar Información" />
+                                            </p:commandLink>
+                                        </p:column>
+                                    </p:dataTable>
+                                </p:outputPanel>
+                            </div>
+                        </div>
+                        <div class="ui-grid-row">
+                            <div class="ui-grid-col-12">
+                                <h4 class="titulo-left-h3">Actualizar información desde archivo XLS</h4>
+                                <p>En esta sección el usuario puede descargar un archivo XLS, que contiene la información del grupo empresarial, la cual podra
+                                    actualizar de forma local y al terminar subir el archivo para actualizar los datos.</p>
+                                <p:commandButton id="btnGenerarXlsGrupoEmpresa" value="Generar Excel" ajax="false" 
+                                                 actionListener="#{MbEscribirExcel.generarArchivoXlsGrupoEmpresarial(nerv['plantilla.grupoEmpresarial.path'], nerv['plantilla.grupoEmpresarial.archivo'])}"
+                                                 onclick="PrimeFaces.monitorDownload(start, stop);" icon="ui-icon-arrowthick-1-s">
+                                    <p:fileDownload value="#{MbEscribirExcel.file}" />
+                                </p:commandButton>
+                                <p>Subir el archivo con la ifnromación de los establecimientos diligenciados para actualizar los datos.</p>
+                                <p:fileUpload fileUploadListener="#{MbLeerExcel.subirArchivoGrupoEmpresarial}" style="width: 50%"
+                                              multiple="false" fileLimitMessage="Número de archivos permitidos 1."
+                                              mode="advanced" dragDropSupport="false" label="Seleccionar" cancelLabel="Cancelar" uploadLabel="Subir" 
+                                              invalidFileMessage="Tipo de archivo no soportado" 
+                                              update="msnInforUnidadLegal" fileLimit="1" allowTypes="/(\.|\/)(xls)$/" />
+                            </div>
+                        </div>
+                    </div>
+
+                    <p:dialog id="dlgReportePdf" header="Reporte Grupo Empresa" widgetVar="dlg" 
+                              resizable="false" modal="false" width="800" height="550">
+                        <!--p:panelGrid id="pnlReportePdf" columns="1" style="width: 100%; height: 100%">
+                            </p:panelGrid-->
+                        <p:outputPanel deferred="true">
+                            <p:media value="#{MbReporteGrupoEmpresa.contenido}" cache="false" width="756" height="550" player="pdf"/>
+                        </p:outputPanel>
+                    </p:dialog>
+
+                    <p:blockUI block="@form" trigger="btnGenerarReporteEstablecimiento" >
                         Generando reporte...<br />
                         <p:graphicImage name="imagen/ajax-loading.gif"/>
                     </p:blockUI>
                 </h:form>
+
+                <p:dialog modal="true" widgetVar="statusDialog" header="Status" draggable="false" closable="false" resizable="false">
+                    <p:graphicImage name="imagen/ajax-donwload.gif" />
+                </p:dialog>
+
             </ui:define>
         </ui:composition>
     </h:body>
