--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-resumen.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-resumen.xhtml
@@ -102,7 +102,7 @@
                 <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.mailContacto3}"/>
             </h:panelGrid>
 
-            <h4 class="titulo-center-h3">Información de Historia</h4>
+            <!--h4 class="titulo-center-h3">Información de Historia</h4>
             <h:panelGrid columns="2" columnClasses="label, value">
                 <p:outputLabel value="Estado: "  styleClass="etiquetaFormulario"/>
                 <p:outputLabel value="#{MbFormGrupoEmpresa.novedadSeleccionada.estado}"/>
@@ -133,7 +133,7 @@
                     <f:convertDateTime pattern="dd/MM/yyyy"/>
                 </p:outputLabel>
 
-            </h:panelGrid>
+            </h:panelGrid-->
 
             <h4 class="titulo-center-h3">Información de Tamaño</h4>
             <h:panelGrid columns="2" columnClasses="label, value">
