--- a/GrupoEmpresarial-war/web/interfaz/unidad-legal/itz-formulario-unidad-legal.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/unidad-legal/itz-formulario-unidad-legal.xhtml
@@ -6,9 +6,12 @@
     <h:body>
         <ui:composition template="/plantilla/plantilla.xhtml">
             <ui:define name="content">
-                <h3 style="text-align: center;">FORMULARIO DE PERFILAMIENTO DE UNIDADES LEGALES</h3>
                 <h:form>
+                    <h3 style="text-align: center;">FORMULARIO DE PERFILAMIENTO DE UNIDADES LEGALES</h3>
+                    <p:growl id="gwFormUnidadLegal" sticky="true" showDetail="true" life="6000" />
+
                     <p:wizard flowListener="#{MbFormUnidadLegal.onFlowProcess}" backLabel="anterior" nextLabel="siguiente">
+
                         <p:tab id="identificacion" title="Identificación">
                             <ui:include src="componente/cpt-formulario-identificacion.xhtml"/>
                         </p:tab>
@@ -24,13 +27,21 @@
                         <p:tab id="tamano" title="Tamaño">
                             <ui:include src="componente/cpt-formulario-tamano.xhtml"/>
                         </p:tab>
+
                         <p:tab id="confirm" title="Confirmar">
-                            <p:panel header="Confirmar información">
-                                <h:panelGrid id="confirmation" columns="3" columnClasses="grid,grid,grid">
-                                </h:panelGrid>
-                            </p:panel>
+                            <ui:include src="componente/cpt-formulario-resumen.xhtml"/>
+                            <p:commandButton value="Actualizar Datos" action="#{MbFormUnidadLegal.actualizarUnidadLegal}" style="float: right; top: 3px;">
+                                <p:confirm header="Confirmación" icon="ui-icon-alert" message="Esta a punto de actualizar la información, desea continuar?"/>
+                            </p:commandButton>
                         </p:tab>
+
                     </p:wizard>
+
+                    <p:confirmDialog global="true" showEffect="fade" >
+                        <p:commandButton value="Aceptar" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+                        <p:commandButton value="Cancelar" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+                    </p:confirmDialog>
+
                 </h:form>
             </ui:define>
         </ui:composition>
